# spil_ui

./: .gitignore  LICENSE  README.md  package.py  pyproject.toml  requirements.txt
action/: action_conf.py  broker.py  job_conf.py  runner.py
data/: files.py
docs/: notes.md  usage.md
engines/: __init__.py  base_engine.py  houdini_engine.py  maya_engine.py  nuke_engine.py  python_engine.py
spil_hamlet_conf/: spil_qtui_conf.py
spil_hamlet_conf/hamlet_plugins/: test.py
spil_hamlet_conf/hamlet_plugins/actions/: action_handler.py  example_actions.py  utils.py
spil_ui/: __init__.py
spil_ui/bar/ui/: bar.py  bar_qt_helper.py  ex3.py  test.py
spil_ui/bar/ui/qt/: bar.ui
spil_ui/browser/ui/: __init__.py  action_handler.py  browser.py  qt_helper.py
spil_ui/browser/ui/qt/: browser.ui  create_project_dialog.ui
spil_ui/conf/: __init__.py  qtui_conf_load.py
spil_ui/util/: clear.py  dialogs.py  parsedatetime.py  time_tools.py
