[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "spil_ui",
  "spil_hamlet_conf"
]
exclude = [".gitignore"]

[project]
name = "spil_ui"
version = "0.1.0"
description = "Qt UI for Spil, The Simple Pipeline Lib."
readme = "README.md"
authors = [{ name = "Michael Haussmann", email = "spil@xeo.info" }]
license = { file = "LICENSE" }
classifiers=[
        "Development Status :: 4 - Beta",
        'Operating System :: OS Independent',
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries",
        "License :: OSI Approved :: MIT License",
]
keywords=[
    'vfx', 'cg', 'vfx-pipeline', 'cg-pipeline', 'path templates'
]
dependencies = [
    "spil",
    "qtpy",
    "qdarkstyle"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ['pytest']

[project.urls]
"Homepage" = "https://github.com/MichaelHaussmann/spil_ui"
"Documentation" = "https://spil.readthedocs.io"

[tool.pytest.ini_options]
#filterwarnings = [
#    "ignore::DeprecationWarning",
#]
log_cli = true
addopts = "--doctest-modules"
